--- a/reading.html
+++ b/reading.html
@@ -410,8 +410,25 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="may" class="section level3">
+<h3>May</h3>
+<div id="thursday-may-4" class="section level4">
+<h4>Thursday May 4</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2022.10.04.509926v1.full">Simons
+et al., preprint</a> Simple scaling laws control the genetic
+architectures of human complex traits</p>
+</div>
+</div>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="thursday-april-27" class="section level4">
+<h4>Thursday April 27</h4>
+<p><a
+href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0284136">Mueller
+et al., 2023</a> The taming of the weed: Developmental plasticity
+facilitated plant domestication</p>
+</div>
 <div id="thursday-april-20" class="section level4">
 <h4>Thursday April 20</h4>
 <p><a
@@ -609,7 +626,7 @@ et al preprint</a> Low heritability of crossover rate in wild
 sticklebacks</p>
 </div>
 </div>
-<div id="may" class="section level3">
+<div id="may-1" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-12" class="section level4">
 <h4>Thursday May 12</h4>
@@ -839,7 +856,7 @@ et al, preprint</a> Polygenic routes lead to parallel altitudinal
 adaptation in Heliosperma pusillum (Caryophyllaceae)</p>
 </div>
 </div>
-<div id="may-1" class="section level3">
+<div id="may-2" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-27" class="section level4">
 <h4>Thursday May 27</h4>
@@ -1120,7 +1137,7 @@ and Weigel 2020</a> Identifying genetic variants underlying phenotypic
 variation in plants without complete genomes</p>
 </div>
 </div>
-<div id="may-2" class="section level3">
+<div id="may-3" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-28" class="section level4">
 <h4>Thursday May 28</h4>
@@ -1402,7 +1419,7 @@ et al preprint</a> Widespread selection and gene flow shape the genomic
 landscape during a radiation of monkeyflowers</p>
 </div>
 </div>
-<div id="may-3" class="section level3">
+<div id="may-4" class="section level3">
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
