--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,12 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="may" class="section level3">
 <h3>May</h3>
+<div id="thursday-may-25" class="section level4">
+<h4>Thursday May 25</h4>
+<p><a href="https://www.nature.com/articles/s41467-023-37332-z">Belluchi
+et al., 2023</a> Selection and adaptive introgression guided the complex
+evolutionary history of the European common bean</p>
+</div>
 <div id="thursday-may-4" class="section level4">
 <h4>Thursday May 4</h4>
 <p><a
