--- a/reading.html
+++ b/reading.html
@@ -410,6 +410,16 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="june" class="section level3">
+<h3>June</h3>
+<div id="thursday-june-1" class="section level4">
+<h4>Thursday June 1</h4>
+<p><a
+href="https://www.researchsquare.com/article/rs-2976609/v1">Belluchi et
+al., 2023</a> A pan-genome of 72 Arabidopsis thaliana accessions reveals
+a conserved genome structure throughout the global species range</p>
+</div>
+</div>
 <div id="may" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-25" class="section level4">
@@ -610,7 +620,7 @@ et al preprint</a> Allele-specific expression reveals multiple paths to
 highland adaptation in maize</p>
 </div>
 </div>
-<div id="june" class="section level3">
+<div id="june-1" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-23" class="section level4">
 <h4>Thursday June 23</h4>
@@ -1127,7 +1137,7 @@ et al 2020</a> Genomic Evidence for Complex Domestication History of the
 Cultivated Tomato in Latin America</p>
 </div>
 </div>
-<div id="june-1" class="section level3">
+<div id="june-2" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-18" class="section level4">
 <h4>Thursday June 18</h4>
@@ -1399,7 +1409,7 @@ disentangling local adaptation from altitudinal gradient selection in
 snapdragon plants</p>
 </div>
 </div>
-<div id="june-2" class="section level3">
+<div id="june-3" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-27" class="section level4">
 <h4>Thursday June 27</h4>
