--- a/reading.html
+++ b/reading.html
@@ -412,6 +412,18 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="june" class="section level3">
 <h3>June</h3>
+<div id="thursday-june-22" class="section level4">
+<h4>Thursday June 22</h4>
+<p><a href="https://www.nature.com/articles/s41467-023-39130-z">Wuest et
+al., 2023</a> Single-gene resolution of diversity-driven overyielding in
+plant genotype mixtures</p>
+</div>
+<div id="thursday-june-15" class="section level4">
+<h4>Thursday June 15</h4>
+<p><a
+href="https://www.cell.com/current-biology/fulltext/S0960-9822(23)00517-1">Fuller
+et al., 2023</a> Plant domestication and agricultural ecologies</p>
+</div>
 <div id="thursday-june-1" class="section level4">
 <h4>Thursday June 1</h4>
 <p><a
