--- a/reading.html
+++ b/reading.html
@@ -409,12 +409,18 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="july" class="section level3">
 <h3>July</h3>
+<div id="thursday-july-20" class="section level4">
+<h4>Thursday July 20</h4>
+<p><a href="https://www.pnas.org/doi/10.1073/pnas.2222041120">Xiao,
+2023</a> Adaptive and maladaptive introgression in grapevine
+domestication</p>
+</div>
 <div id="thursday-july-13" class="section level4">
 <h4>Thursday July 13</h4>
 <p><a
-href="https://onlinelibrary.wiley.com/doi/full/10.1002/evl3.308">Tenaillon
-et al., 2023</a> The genomic scale of fluctuating selection in a natural
-plant population</p>
+href="https://onlinelibrary.wiley.com/doi/full/10.1002/evl3.308">Kelly,
+2023</a> The genomic scale of fluctuating selection in a natural plant
+population</p>
 </div>
 <div id="thursday-july-6" class="section level4">
 <h4>Thursday July 6</h4>
