--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,15 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="august" class="section level3">
+<h3>August</h3>
+<div id="thursday-august-17" class="section level4">
+<h4>Thursday August 17</h4>
+<p><a href="https://www.nature.com/articles/ncomms8960">Sicard, 2023</a>
+Divergent sorting of a balanced ancestral polymorphism underlies the
+establishment of gene-flow barriers in Capsella</p>
+</div>
+</div>
 <div id="july" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-20" class="section level4">
@@ -633,7 +642,7 @@ et al 2022</a> Uncovering the genomic basis of an extraordinary plant
 invasion</p>
 </div>
 </div>
-<div id="august" class="section level3">
+<div id="august-1" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-25" class="section level4">
 <h4>Thursday August 25</h4>
@@ -857,7 +866,7 @@ et al, 2021</a> An ancestral recombination graph of human, Neanderthal,
 and Denisovan genomes</p>
 </div>
 </div>
-<div id="august-1" class="section level3">
+<div id="august-2" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-26" class="section level4">
 <h4>Thursday August 26</h4>
@@ -1372,7 +1381,7 @@ et al 2019</a> Impact of demography on linked selection in two
 outcrossing Brassicaceae species</p>
 </div>
 </div>
-<div id="august-2" class="section level3">
+<div id="august-3" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-29" class="section level4">
 <h4>Thursday August 29</h4>
