--- a/people.html
+++ b/people.html
@@ -421,6 +421,15 @@ University of Cologne <a href="about.html">read more</a></p>
 <p>Akanksha studies the introduction history of grain amaranth to India
 and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br>
 <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Takou-Margarita-2.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Margarita Takou</strong>
+<div style="float: left">
+
+</div>
+<p>Margarita studies polygenic selection in an experimental population
+of European maize. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="phd-candidates" class="section level2">
 <h2>PhD candidates</h2>
@@ -433,16 +442,6 @@ and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br>
 </div>
 <p>Corbinian is a PhD student studying the genetic landscape of grain
 amaranth and how it changed during the repeated domestication.
-<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
-<div style="float: left">
-<p><img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Julio Martinez</strong>
-<div style="float: left">
-
-</div>
-<p>Julio is working on the molecular validation of domestication genes
-in grain amaranth and the conservation of the MBW regulation network.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
@@ -506,19 +505,6 @@ syndromes as part of the TRR 341</p>
 </div>
 -->
 </div>
-<div id="visitors" class="section level2">
-<h2>Visitors</h2>
-<div style="float: left">
-<p><img src="own_images/people/roger_sulub.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Roger Antonio Sulub Tun </strong>
-<div style="float: left">
-
-</div>
-<p>Roger is a visiting PhD student from CICY in Mexico and studies the
-center of origin of <em>A. cruentus</em> <!-- break --> <br> <br> <br>
-<br> <br> <br> <br></p>
-</div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
@@ -538,7 +524,17 @@ center of origin of <em>A. cruentus</em> <!-- break --> <br> <br> <br>
 
 </div>
 <p>Emily works on pollen nucleous extraction and cell sorting.
-<!-- break --> <br> <br> <br> <br> <br> <br> <br> <!-- break 
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Jan_Krause.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Jan Krause</strong>
+<div style="float: left">
+
+</div>
+<p>Jan studies the diversity of Cetral American grain amaranth.
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<!-- break 
 
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -574,7 +570,7 @@ Ahad is a biochemistry master student wroking on long read sequencing in amarant
 
  <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
-</div>--></p>
+</div>-->
 </div>
 <div id="joining-the-lab" class="section level2">
 <h2>Joining the lab</h2>
@@ -595,6 +591,8 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <ul>
 <li>Sophie Schreiner (BSc student)</li>
 <li>Tom Winkler (BSc, MSc student)</li>
+<li>José Goncalves-Dias (PhD student)</li>
+<li>Julio Martinez (MSc student)</li>
 </ul>
 </div>
 <div id="past-visitors" class="section level2">
@@ -609,6 +607,8 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 <li>Laura Merx</li>
 <li>Krzysztof Pukacz</li>
 <li>Anny Garces</li>
+<li>Nguyen Quang Huy</li>
+<li>Roger Antonio Sulub Tun</li>
 </ul>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
