--- a/publications.html
+++ b/publications.html
@@ -401,7 +401,10 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
-<li>coming soon</li>
+<li><a href="https://doi.org/10.1101/2023.08.24.554588">Isoform-resolved
+genome annotation enables mapping of tissue-specific betalain regulation
+and anthocyanin regulator co-option in amaranth</a> <strong>Winkler TS,
+Vollmer SK and Stetter MG</strong></li>
 </ul>
 </div>
 <div id="section" class="section level2">
@@ -410,8 +413,8 @@ $(document).ready(function () {
 <li><a
 href="https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msad177/7239273?utm_source=authortollfreelink&amp;utm_campaign=mbe&amp;utm_medium=email&amp;guestAccessKey=172dbed5-2be8-44b6-9a54-2e1c537889d1">Genetic
 incompatibilities and evolutionary rescue by wild relatives shaped grain
-amaranth domestication</a> **Gonçalves-Dias J, Singh A, Graf C and
-Stetter MG <em>Molecular Biology and Evolution</em> <a
+amaranth domestication</a> <strong>Gonçalves-Dias J, Singh A, Graf C and
+Stetter MG</strong> <em>Molecular Biology and Evolution</em> <a
 href="https://doi.org/10.1101/2023.03.17.533106">Preprint</a></li>
 </ul>
 </div>
