--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,32 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="october" class="section level3">
+<h3>October</h3>
+<div id="thursday-october-5" class="section level4">
+<h4>Thursday October 5</h4>
+<p><a
+href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010883">Zeitler,
+et al., 2023</a> Purging due to self-fertilization does not prevent
+accumulation of expansion load</p>
+</div>
+</div>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="thursday-september-21" class="section level4">
+<h4>Thursday September 21</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.09.06.556499v1.full">Raingeval
+et al., preprint</a> Retrotransposon-driven environmental regulation of
+FLC leads to adaptive response to herbicide</p>
+</div>
+<div id="thursday-september-14" class="section level4">
+<h4>Thursday September 14</h4>
+<p><a href="https://www.nature.com/articles/s41588-023-01495-8">Gu et
+al., 2023</a> Structure and function of rice hybrid genomes reveal
+genetic basis and optimal performance of heterosis</p>
+</div>
+</div>
 <div id="august" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-24" class="section level4">
@@ -589,7 +615,7 @@ the loss of an anthocyanin carrier protein in betalain-pigmented
 Caryophyllales</p>
 </div>
 </div>
-<div id="october" class="section level3">
+<div id="october-1" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-13" class="section level4">
 <h4>Thursday October 13</h4>
@@ -604,7 +630,7 @@ href="https://www.science.org/doi/10.1126/science.abn5642">Exposito-Alonso,
 et al 2022</a> Genetic diversity loss in the Anthropocene</p>
 </div>
 </div>
-<div id="september" class="section level3">
+<div id="september-1" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-29" class="section level4">
 <h4>Thursday September 29</h4>
@@ -822,7 +848,7 @@ al, 2021</a> Genomic evidence of human selection on Vavilovian
 mimicry</p>
 </div>
 </div>
-<div id="october-1" class="section level3">
+<div id="october-2" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-28" class="section level4">
 <h4>Thursday October 28</h4>
@@ -844,7 +870,7 @@ et al, preprint</a> Not so local: the population genetics of convergent
 adaptation in maize and teosinte</p>
 </div>
 </div>
-<div id="september-1" class="section level3">
+<div id="september-2" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-30" class="section level4">
 <h4>Thursday September 30</h4>
@@ -1088,7 +1114,7 @@ et al, preprint</a> Experimental evolution of adaptive divergence under
 varying degrees of gene flow</p>
 </div>
 </div>
-<div id="october-2" class="section level3">
+<div id="october-3" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-29" class="section level4">
 <h4>Thursday October 29</h4>
@@ -1124,7 +1150,7 @@ Corre et al. 2020</a> Adaptive introgression from maize has facilitated
 the establishment of teosinte as a noxious weed in Europe</p>
 </div>
 </div>
-<div id="september-2" class="section level3">
+<div id="september-3" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-24" class="section level4">
 <h4>Thursday September 24</h4>
@@ -1323,7 +1349,7 @@ et al 2019</a> The Genomic Basis for Short-Term Evolution of
 Environmental Adaptation in Maize</p>
 </div>
 </div>
-<div id="october-3" class="section level3">
+<div id="october-4" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-31" class="section level4">
 <h4>Thursday October 31</h4>
@@ -1356,7 +1382,7 @@ sunflowers</p>
 <p>Holiday - No C.R.O.P</p>
 </div>
 </div>
-<div id="september-3" class="section level3">
+<div id="september-4" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-26" class="section level4">
 <h4>Thursday September 26</h4>
