CROP, papers and people

--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,22 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="thursday-september-21" class="section level4">
+<h4>Thursday September 21</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.09.06.556499v1.full">Raingeval
+et al., preprint</a> Retrotransposon-driven environmental regulation of
+FLC leads to adaptive response to herbicide</p>
+</div>
+<div id="thursday-september-14" class="section level4">
+<h4>Thursday September 14</h4>
+<p><a href="https://www.nature.com/articles/s41588-023-01495-8">Gu et
+al., 2023</a> Structure and function of rice hybrid genomes reveal
+genetic basis and optimal performance of heterosis</p>
+</div>
+</div>
 <div id="august" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-24" class="section level4">
@@ -604,7 +620,7 @@ href="https://www.science.org/doi/10.1126/science.abn5642">Exposito-Alonso,
 et al 2022</a> Genetic diversity loss in the Anthropocene</p>
 </div>
 </div>
-<div id="september" class="section level3">
+<div id="september-1" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-29" class="section level4">
 <h4>Thursday September 29</h4>
@@ -844,7 +860,7 @@ et al, preprint</a> Not so local: the population genetics of convergent
 adaptation in maize and teosinte</p>
 </div>
 </div>
-<div id="september-1" class="section level3">
+<div id="september-2" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-30" class="section level4">
 <h4>Thursday September 30</h4>
@@ -1124,7 +1140,7 @@ Corre et al. 2020</a> Adaptive introgression from maize has facilitated
 the establishment of teosinte as a noxious weed in Europe</p>
 </div>
 </div>
-<div id="september-2" class="section level3">
+<div id="september-3" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-24" class="section level4">
 <h4>Thursday September 24</h4>
@@ -1356,7 +1372,7 @@ sunflowers</p>
 <p>Holiday - No C.R.O.P</p>
 </div>
 </div>
-<div id="september-3" class="section level3">
+<div id="september-4" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-26" class="section level4">
 <h4>Thursday September 26</h4>
