--- a/reading.html
+++ b/reading.html
@@ -407,15 +407,53 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="november" class="section level3">
+<h3>November</h3>
+<div id="thursday-november-16" class="section level4">
+<h4>Thursday November 16</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2022.08.22.504706v3">Benegas,
+et al., preprint</a> DNA language models are powerful predictors of
+genome-wide variant effects</p>
+</div>
+<div id="thursday-november-9" class="section level4">
+<h4>Thursday November 9</h4>
+<p><a href="https://www.nature.com/articles/s41467-023-41251-4">Liu, et
+al., preprint</a> Genomes of cultivated and wild Capsicum species
+provide insights into pepper domestication and population
+differentiation</p>
+</div>
+<div id="thursday-november-2" class="section level4">
+<h4>Thursday November 2</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.09.24.559235v1">Zwaenepoel,
+et al., preprint</a> Polygenic barriers to gene flow: the role of
+dominance, haploid selection and heterogeneous genetic architectures</p>
+</div>
+</div>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="thursday-october-26" class="section level4">
+<h4>Thursday October 26</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.09.18.557618v1">Stitzer
+et al., preprint</a> Transposable element abundance subtly contributes
+to lower fitness in maize</p>
+</div>
+<div id="thursday-october-19" class="section level4">
+<h4>Thursday October 19</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.09.11.557157v1">Redmond,,
+et al., preprint</a> Single-plant-omics reveals the cascade of
+transcriptional changes during the vegetative-to-reproductive
+transition</p>
+</div>
 <div id="thursday-october-12" class="section level4">
 <h4>Thursday October 12</h4>
-<p>[ Opedal, et al., 2023](<a
-href="https://www.pnas.org/doi/10.1073/pnas.2203228120"
-class="uri">https://www.pnas.org/doi/10.1073/pnas.2203228120</a>
-Evolvability and trait function predict phenotypic divergence of plant
-populations</p>
+<p><a
+href="https://www.nature.com/articles/d41586-023-02895-w?utm_source=Nature+Briefing&amp;utm_campaign=ac0c637986-briefing-dy-20230922&amp;utm_medium=email&amp;utm_term=0_c9dfd39373-ac0c637986-46253114">Khaipho-Burch,
+et al., 2023</a> Genetic modification can improve crop yields — but stop
+overselling it</p>
 </div>
 <div id="thursday-october-5" class="section level4">
 <h4>Thursday October 5</h4>
@@ -605,7 +643,7 @@ walnuts (Juglans regia)</p>
 </div>
 <div id="section" class="section level2">
 <h2>2022</h2>
-<div id="november" class="section level3">
+<div id="november-1" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-24" class="section level4">
 <h4>Thursday November 24</h4>
@@ -834,7 +872,7 @@ natural Mimulus population</p>
 Galápagos tomato</p>
 </div>
 </div>
-<div id="november-1" class="section level3">
+<div id="november-2" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-25" class="section level4">
 <h4>Thursday November 25</h4>
@@ -1091,7 +1129,7 @@ et al, preprint</a> A framework to quantify phenotypic and genotypic
 parallel evolution</p>
 </div>
 </div>
-<div id="november-2" class="section level3">
+<div id="november-3" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-26" class="section level4">
 <h4>Thursday November 26</h4>
@@ -1330,7 +1368,7 @@ Domestication and Environmental Conditions in Barley</p>
 <p>No C.R.O.P</p>
 </div>
 </div>
-<div id="november-3" class="section level3">
+<div id="november-4" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-28" class="section level4">
 <h4>Thursday November 28</h4>
@@ -1658,7 +1696,7 @@ href="https://www.nature.com/articles/s41477-018-0311-x.epdf?author_access_token
 et al. 2018</a> Unleashing meiotic crossovers in crops</p>
 </div>
 </div>
-<div id="november-4" class="section level3">
+<div id="november-5" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-29" class="section level4">
 <h4>Thursday November 29</h4>
