--- a/reading.html
+++ b/reading.html
@@ -407,8 +407,33 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="december" class="section level3">
+<h3>December</h3>
+<div id="thursday-december-7" class="section level4">
+<h4>Thursday December 7</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.10.16.562583v1">Ruffley,
+et al., preprint</a> Conflicts in natural selection constrain adaptation
+to climate change in Arabidopsis thaliana</p>
+</div>
+</div>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="thursday-november-30" class="section level4">
+<h4>Thursday November 30</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.10.26.564303v2">O’Brien,
+et al., preprint</a> The distribution of fitness effects during adaptive
+walks using a simple genetic network</p>
+</div>
+<div id="thursday-november-23" class="section level4">
+<h4>Thursday November 23</h4>
+<p><a
+href="https://academic.oup.com/genetics/advance-article/doi/10.1093/genetics/iyad186/7310833">Desbiez-Piat,
+et al., 2023</a> Pervasive G × E interactions shape adaptive
+trajectories and the exploration of the phenotypic space in artificial
+selection experiments</p>
+</div>
 <div id="thursday-november-16" class="section level4">
 <h4>Thursday November 16</h4>
 <p><a
@@ -856,7 +881,7 @@ and the genetic basis of agronomic traits</p>
 </div>
 <div id="section-1" class="section level2">
 <h2>2021</h2>
-<div id="december" class="section level3">
+<div id="december-1" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-9" class="section level4">
 <h4>Thursday December 9</h4>
@@ -1112,7 +1137,7 @@ gene flow from South America</p>
 </div>
 <div id="section-2" class="section level2">
 <h2>2020</h2>
-<div id="december-1" class="section level3">
+<div id="december-2" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-10" class="section level4">
 <h4>Thursday December 10</h4>
@@ -1354,7 +1379,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 <div id="section-3" class="section level2">
 <h2>2019</h2>
-<div id="december-2" class="section level3">
+<div id="december-3" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-12" class="section level4">
 <h4>Thursday December 12</h4>
@@ -1666,7 +1691,7 @@ legacy of maize in South America</p>
 </div>
 <div id="section-4" class="section level2">
 <h2>2018</h2>
-<div id="december-3" class="section level3">
+<div id="december-4" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-27" class="section level4">
 <h4>Thursday December 27</h4>
