--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,30 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="thursday-february-1" class="section level4">
+<h4>Thursday February 1</h4>
+<p><a
+href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010865">Kreiner,
+et al., 2023</a></p>
+<p>Quantifying the role of genome size and repeat content in adaptive
+variation and the architecture of flowering time in Amaranthus
+tuberculatus</p>
+</div>
+</div>
+<div id="january-1" class="section level3">
+<h3>January</h3>
+<div id="thursday-january-25" class="section level4">
+<h4>Thursday January 25</h4>
+<p><a
+href="https://academic.oup.com/nar/article/51/17/9203/7240371?login=true">Langmüller,
+et al., 2023</a> The genomic distribution of transposable elements is
+driven by spatially variable purifying selection</p>
+</div>
+</div>
+<div id="section" class="section level2">
+<h2>2023</h2>
 <div id="december" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-7" class="section level4">
@@ -644,7 +668,7 @@ et al., preprint</a> Drivers of genomic landscapes of differentiation
 across Populus divergence gradient</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-26" class="section level4">
 <h4>Thursday January 26</h4>
@@ -666,7 +690,8 @@ href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.101
 walnuts (Juglans regia)</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2022</h2>
 <div id="november-1" class="section level3">
 <h3>November</h3>
@@ -862,7 +887,7 @@ et al 2022</a> Mutation bias reflects natural selection in Arabidopsis
 thaliana</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january-3" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-27" class="section level4">
 <h4>Thursday January 27</h4>
@@ -879,7 +904,7 @@ and the genetic basis of agronomic traits</p>
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>2021</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
@@ -1112,7 +1137,7 @@ Arabidopsis thaliana Reveals Multiple Sources of Introduction from
 Across Eurasia</p>
 </div>
 </div>
-<div id="january-2" class="section level3">
+<div id="january-4" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-28" class="section level4">
 <h4>Thursday January 28</h4>
@@ -1135,7 +1160,7 @@ gene flow from South America</p>
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>2020</h2>
 <div id="december-2" class="section level3">
 <h3>December</h3>
@@ -1366,7 +1391,7 @@ transposable element over-accumulation which provides variants for local
 adaptation</p>
 </div>
 </div>
-<div id="january-3" class="section level3">
+<div id="january-5" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
@@ -1377,7 +1402,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>2019</h2>
 <div id="december-3" class="section level3">
 <h3>December</h3>
@@ -1650,7 +1675,7 @@ routes to adaptation</p>
 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-4" class="section level3">
+<div id="january-6" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
@@ -1689,7 +1714,7 @@ legacy of maize in South America</p>
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>2018</h2>
 <div id="december-4" class="section level3">
 <h3>December</h3>
