--- a/reading.html
+++ b/reading.html
@@ -397,7 +397,7 @@ $(document).ready(function () {
 
 <p> </p>
 <p>C.R.O.P is our weekly journal club for anyone interested in
-evolution. We meet on Thursdays at 4.00 pm at <a
+evolution. We meet on Tuesday at 4.00 pm at <a
 href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a>
 for an open discussion about the weekly paper in a relaxed
 atmosphere.</p>
@@ -407,19 +407,31 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
-<div id="january" class="section level3">
-<h3>January</h3>
+<div id="feburary" class="section level3">
+<h3>Feburary</h3>
+<div id="tuesday-february-27" class="section level4">
+<h4>Tuesday February 27</h4>
+<p><a
+href="https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrad065/7577653">Walter
+et al, 2024</a> Environmental effects on genetic variance are likely to
+constrain adaptation in novel environments</p>
+</div>
+<div id="tuesday-february-20" class="section level4">
+<h4>Tuesday February 20</h4>
+<p><a href="https://www.pnas.org/doi/full/10.1073/pnas.2208116120">Pope
+et al, 2023</a> The expansion of agriculture has shaped the recent
+evolutionary history of a specialized squash pollinator</p>
+</div>
 <div id="thursday-february-1" class="section level4">
 <h4>Thursday February 1</h4>
 <p><a
 href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010865">Kreiner,
-et al., 2023</a></p>
-<p>Quantifying the role of genome size and repeat content in adaptive
-variation and the architecture of flowering time in Amaranthus
-tuberculatus</p>
+et al., 2023</a> Quantifying the role of genome size and repeat content
+in adaptive variation and the architecture of flowering time in
+Amaranthus tuberculatus</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-25" class="section level4">
 <h4>Thursday January 25</h4>
@@ -668,7 +680,7 @@ et al., preprint</a> Drivers of genomic landscapes of differentiation
 across Populus divergence gradient</p>
 </div>
 </div>
-<div id="january-2" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-26" class="section level4">
 <h4>Thursday January 26</h4>
@@ -887,7 +899,7 @@ et al 2022</a> Mutation bias reflects natural selection in Arabidopsis
 thaliana</p>
 </div>
 </div>
-<div id="january-3" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-27" class="section level4">
 <h4>Thursday January 27</h4>
@@ -1137,7 +1149,7 @@ Arabidopsis thaliana Reveals Multiple Sources of Introduction from
 Across Eurasia</p>
 </div>
 </div>
-<div id="january-4" class="section level3">
+<div id="january-3" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-28" class="section level4">
 <h4>Thursday January 28</h4>
@@ -1391,7 +1403,7 @@ transposable element over-accumulation which provides variants for local
 adaptation</p>
 </div>
 </div>
-<div id="january-5" class="section level3">
+<div id="january-4" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
@@ -1675,7 +1687,7 @@ routes to adaptation</p>
 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-6" class="section level3">
+<div id="january-5" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
